--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="/page/my-recipes.html"><i class="fas fa-file-alt"></i> Recipes</a></li>
         </ul>
       </nav>
-      <button class="signout-btn"><a href="/login.html">Sign out</a></button>
+      <button class="signout-btn">Sign out</button>
     </aside>
 
     <!-- Main Content -->
@@ -68,29 +68,27 @@
             <option value="Vegetarian dishes">Vegetarian dishes</option>
           </select>
         </section>
-
-
-
         <!-- Recipe card list -->
         <section class="recipe-list">
           <!-- Sample card -->
           <!-- <div class="recipe-card">
-
-            <div class="card-badge">
-              <div class="badge">Community Recipes</div>
+            <div class="card-left">
+              <div class="card-badge">
+                <i class="fas fa-users"></i>
+                <span>Community Recipes</span>
+              </div>
+              <img class="card-img" src="/assets/images/img-avata-food/default-avata.png" alt="recipe image">
             </div>
 
-            <div class="card-body">
+            <div class="card-right">
               <div class="card-header">
                 <div>
-                  <h2 class="recipe-title">Turmeric Roasted Cauliflower Salad (lowfodmap)</h2>
-                  <div class="card-meta">
-                    <p class="author">Joana Jardim</p>
-                    <div class="likes">
-                      <i class="far fa-heart"></i> <span>33</span>
-                    </div>
-                  </div>
+                  <h2 class="recipe-title">Turmeric Roasted Cauliflower Salad</h2>
+                  <p class="author">Joana Jardim</p>
                   <p class="tags">Vegetarian dishes</p>
+                </div>
+                <div class="likes">
+                  <i class="far fa-heart"></i> <span>33</span>
                 </div>
               </div>
 
@@ -102,7 +100,6 @@
                 <div class="nutrient">Protein<br><strong>5 g</strong></div>
               </div>
             </div>
-
           </div> -->
           <!-- ... nhiều recipe-card khác -->
         </section>
