--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
 
         <div class="register-link">
           <span>Already have an account,</span>
-          <a href="#">click here !</a>
+          <a href="/login.html">click here !</a>
         </div>
 
         <button type="submit">Sign up</button>
