--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
         </div>
 
         <p class="register-link">
-          Don't have an account, <a href="#">click here !</a>
+          Don't have an account, <a href="/register.html">click here !</a>
         </p>
 
         <button type="submit">Sign in</button>
