--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="sort-group">
             <i class="fas fa-sort-amount-up-alt"></i>
             <select id="sortSelect">
-              <option value="" disabled selected hidden>Sort by nutrient</option>
+              <option value="">Sort by nutrient</option>
               <option value="energy">Energy</option>
               <option value="fat">Fat</option>
               <option value="carbs">Carbohydrate</option>
@@ -61,7 +61,7 @@
           </div>
 
           <select id="categorySelect">
-            <option value="" disabled selected hidden>All categories</option>
+            <option value="">All categories</option>
             <option value="Desserts">Desserts</option>
             <option value="Breakfast and snacks">Breakfast and snacks</option>
             <option value="Appetizers and side dishes">Appetizers and side dishes</option>
