--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
         <input type="password" placeholder="Password" required>
 
         <div class="options">
-          <label><input type="checkbox"> Remember me</label>
+          <label><input type="checkbox" id="rememberMe"> Remember me</label>
         </div>
 
         <p class="register-link">
