--- a/login.html
+++ b/login.html
@@ -24,8 +24,8 @@
       <h2>Please sign in</h2>
 
       <form>
-        <input type="email" placeholder="Email address" required>
-        <input type="password" placeholder="Password" required>
+        <input type="email" placeholder="Email address" >
+        <input type="password" placeholder="Password" >
 
         <div class="options">
           <label><input type="checkbox" id="rememberMe"> Remember me</label>
